Check if fileSystem pointer is nullptr before trying to read used space

Hopefully it fixes the following crashes as well:
BUG: 364863
BUG: 365872